--- a/public/backend.css
+++ b/public/backend.css
@@ -1,3 +1,4 @@
+/*
 .tl_edit_preview_important_part {
     margin: 0;
     border: 0;
@@ -35,4 +36,14 @@
     padding: 0;
     border: 0;
     display: block;
+}
+*/
+
+.widget-importantPartSwitch + .widget {
+    clear: both;
+}
+
+.widget-importantPartSwitch + .widget:before {
+    content: "";
+    display: table;
 }
